--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 </head>
 <body>
 <div id="imageContainer">
-    <img src="test.png" alt="test" class="welcomeImage">
+    <img src="pngwing.com.png" alt="test" class="welcomeImage">
 </div>
 <div id="loginContainer">
-    <h1>MindUp</h1>
+    <h1 class="MindUpTitle">MindUp</h1>
     <form action="/login" method="post" id="login">
-        <h2>Привет</h2>
+        <h2 class="helloText">Привет!</h2>
         <h3>Введите email и пароль чтобы продолжить</h3>
         <label>
             Электронная почта
@@ -22,10 +22,13 @@
             Пароль
             <input type="password" name="password" required placeholder="Введите пароль">
         </label>
-        <button type="submit">
+        <button type="submit" class="entranceButton">
             Войти
         </button>
-        Нет аккаунта? <a href="">Регистрация</a>
+        <div class="underText">
+            Нет аккаунта?&nbsp<a href="">Регистрация</a>
+        </div>
+
     </form>
 </div>
 
