--- a/groups.html
+++ b/groups.html
@@ -5,10 +5,29 @@
     <title>Группы</title>
     <link rel="stylesheet" href="groups.css">
 </head>
+<header>
+    <div class="menu">
+        <a href="/" class="logo">MindUp</a>
+        <nav сlass="navigationMenu">
+            <a href="/" class="groups">Группы</a>
+            <a href="/" class="meetings">Все встречи</a>
+            <div class="search">
+                <form>
+                    <button type="submit"></button>
+                    <input type="text" placeholder="Поиск">
+                </form>
+            </div>
+        </nav>
+        <a href="/" class="profile">Профиль</a>
+    </div>
+</header>
 <body>
-    <div class="menu"></div>
-    <div class="block add">+</div>
-    <div class="block group">ФИИТ</div>
+
+    <div class="block add">Добавь группу</div>
+    <div class="block group">
+        <div class="groupTitle">
+            ФИИТ
+        </div></div>
     <div class="block group">Контур</div>
     <div class="block group">ШАД</div>
 </body>
