--- a/groups.html
+++ b/groups.html
@@ -13,7 +13,7 @@
             <a href="/" class="meetings">Все встречи</a>
             <div class="search">
                 <form>
-                    <button type="submit"></button>
+                    <button type="submit" class="searchButton">WIP</button>
                     <input type="text" placeholder="Поиск">
                 </form>
             </div>
@@ -23,11 +23,12 @@
 </header>
 <body>
 
-    <div class="block add">Добавь группу</div>
-    <div class="block group">
+    <div class="block add">Добавить группу</div>
+    <div class="block group fiit">
         <div class="groupTitle">
             ФИИТ
-        </div></div>
+        </div>
+    </div>
     <div class="block group">Контур</div>
     <div class="block group">ШАД</div>
 </body>
