--- a/groups.html
+++ b/groups.html
@@ -7,9 +7,17 @@
 </head>
 <body>
     <div class="menu"></div>
-    <div class="block add">+</div>
-    <div class="block group">ФИИТ</div>
-    <div class="block group">Контур</div>
-    <div class="block group">ШАД</div>
+    <div class="groups-wrapper">
+        <div class="groups">
+            <div class="block add">+</div>
+            <div class="block group">ФИИТ</div>
+            <div class="block group">Контур</div>
+            <div class="block group">ШАД</div>
+            <div class="block group" style="display: none">ШАД</div>
+            <div class="block group" style="display: none">ШАД</div>
+            <div class="block group" style="display: none">ШАД</div>
+        </div>
+    </div>
+<script src="index.js"></script>
 </body>
 </html>
