--- a/groups.html
+++ b/groups.html
@@ -18,6 +18,6 @@
             <div class="block group" style="display: none">ШАД</div>
         </div>
     </div>
-<script src="index.js"></script>
+<script src="groups.js"></script>
 </body>
 </html>
