--- a/groups.html
+++ b/groups.html
@@ -14,7 +14,9 @@
             <div class="search">
                 <form>
                     <button type="submit" class="searchButton">WIP</button>
-                    <input type="text" placeholder="Поиск">
+                    <label>
+                        <input type="text" placeholder="Поиск">
+                    </label>
                 </form>
             </div>
         </nav>
