--- a/groups.html
+++ b/groups.html
@@ -9,7 +9,7 @@
     <div class="menu">
         <a href="/" class="logo">MindUp</a>
         <nav сlass="navigationMenu">
-            <a href="/" class="groups">Группы</a>
+            <a href="/" class="groupsLink">Группы</a>
             <a href="/" class="meetings">Все встречи</a>
             <div class="search">
                 <form>
