--- a/groups.html
+++ b/groups.html
@@ -8,7 +8,7 @@
 <header>
     <div class="menu">
         <a href="/" class="logo">MindUp</a>
-        <nav сlass="navigationMenu">
+        <nav class="navigationMenu">
             <a href="/" class="groupsLink">Группы</a>
             <a href="/" class="meetings">Все встречи</a>
             <div class="search">
@@ -28,12 +28,14 @@
         <div class="groups">
             <div class="block add">Добавить группу</div>
             <div class="block" style="background-image: url('Blog_inner_pic.png')">
-                <div class="groupTitle">
-                    ФИИТ
-                </div>
+                <h2>ФИИТ</h2>
             </div>
-            <div class="block">Контур</div>
-            <div class="block">ШАД</div>
+            <div class="block">
+                <h2>Контур</h2>
+            </div>
+            <div class="block">
+                <h2>ШАД</h2>
+            </div>
         </div>
     </div>
 <script src="groups.js"></script>
