--- a/groups.html
+++ b/groups.html
@@ -7,10 +7,10 @@
 </head>
 <header>
     <div class="menu">
-        <a href="/" class="logo">MindUp</a>
+        <a href="/brawlstars" class="logo">MindUp</a>
         <nav class="navigationMenu">
-            <a href="/" class="groupsLink">Группы</a>
-            <a href="/" class="meetings">Все встречи</a>
+            <a href="/brawlstars" class="groupsLink">Группы</a>
+            <a href="/brawlstars" class="meetings">Все встречи</a>
             <div class="search">
                 <form>
                     <button type="submit" class="searchButton">WIP</button>
@@ -20,20 +20,20 @@
                 </form>
             </div>
         </nav>
-        <a href="/" class="profile">Профиль</a>
+        <a href="/brawlstars" class="profile">Профиль</a>
     </div>
 </header>
 <body>
     <div class="groups-wrapper">
         <div class="groups">
             <div class="block add">Добавить группу</div>
-            <div class="block" style="background-image: url('Blog_inner_pic.png')">
+            <div class="block" style="background-image: url('groups_images/fiit.png')">
                 <h2>ФИИТ</h2>
             </div>
             <div class="block">
-                <h2>Контур</h2>
+                <h2>СКБ Контур</h2>
             </div>
-            <div class="block">
+            <div class="block" style="background-image: url('groups_images/shad.jpeg')">
                 <h2>ШАД</h2>
             </div>
         </div>
