--- a/registration.html
+++ b/registration.html
@@ -13,7 +13,7 @@
     <h1 class="MindUpTitle">MindUp</h1>
     <form action="login" method="post" id="register">
         <h2 class="helloText">Регистрация</h2>
-        <h3>Введите данные для регистрации</h3>
+        <h3>Введите данные пользователя</h3>
         <label>
             Имя пользователя
             <input type="text" name="userName" required placeholder="Введите имя пользователя">
