--- a/groups.html
+++ b/groups.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <title>Группы</title>
     <link rel="stylesheet" href="groups.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
 </head>
-<header>
-    <div class="menu">
+<body>
+    <header>
         <a href="/brawlstars" class="logo">MindUp</a>
-        <nav class="navigationMenu">
+        <div class="menuGroup">
             <a href="/brawlstars" class="groupsLink">Группы</a>
             <a href="/brawlstars" class="meetings">Все встречи</a>
             <div class="search">
@@ -19,11 +20,12 @@
                     </label>
                 </form>
             </div>
-        </nav>
-        <a href="/brawlstars" class="profile">Профиль</a>
-    </div>
-</header>
-<body>
+        </div>
+        <a href="/brawlstars" class="menuGroup profile">
+            <img src="svg_files/profile.svg" alt="Profile" class="profile-svg"></img>
+            <p>Профиль</p>
+        </a>
+    </header>
     <div class="groups-wrapper">
         <div class="groups">
             <div class="block add">Добавить группу</div>
