--- a/groups.html
+++ b/groups.html
@@ -22,10 +22,11 @@
             </div>
         </div>
         <a href="/brawlstars" class="menuGroup profile">
-            <img src="svg_files/profile.svg" alt="Profile" class="profile-svg"></img>
+            <img src="site_images/profile.svg" alt="Profile" class="profile-svg"></img>
             <p>Профиль</p>
         </a>
     </header>
+    <div class="background-container"></div>
     <div class="groups-wrapper">
         <div class="groups">
             <div class="block add">Добавить группу</div>
