--- a/groups.html
+++ b/groups.html
@@ -4,20 +4,25 @@
     <meta charset="UTF-8">
     <title>Группы</title>
     <link rel="stylesheet" href="groups.css">
+    <link rel="stylesheet" href="header.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
 </head>
 <body>
     <header>
-        <a href="/brawlstars" class="logo">MindUp</a>
+        <div class="menuGroup">
+            <a href="/brawlstars" class="logo">MindUp</a>
+        </div>
         <div class="menuGroup">
             <a href="/brawlstars" class="groupsLink">Группы</a>
             <a href="/brawlstars" class="meetings">Все встречи</a>
             <div class="search">
                 <form>
-                    <button type="submit" class="searchButton">WIP</button>
                     <label>
                         <input type="text" placeholder="Поиск">
                     </label>
+                    <button type="submit" class="searchButton">
+                        <img src="site_images/search.svg" alt="search" width="21px">
+                    </button>
                 </form>
             </div>
         </div>
