--- a/groups.html
+++ b/groups.html
@@ -5,6 +5,7 @@
     <title>Группы</title>
     <link rel="stylesheet" href="groups.css">
     <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="blocks.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
 </head>
 <body>
@@ -32,8 +33,8 @@
         </a>
     </header>
     <div class="background-container"></div>
-    <div class="groups-wrapper">
-        <div class="groups">
+    <div class="blocks-wrapper">
+        <div class="blocks">
             <div class="block add">Добавить группу</div>
             <div class="block" style="background-image: url('groups_images/fiit.png')">
                 <h2>ФИИТ</h2>
