--- a/authorisation.html
+++ b/authorisation.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>MindUp</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="authorisation.css">
 </head>
 <body>
 <div id="imageContainer">
@@ -13,7 +13,7 @@
     <h1 class="MindUpTitle">MindUp</h1>
     <form action="/login" method="post" id="login">
         <h2 class="helloText">Привет!</h2>
-        <h3>Введите email и пароль чтобы продолжить</h3>
+        <h3>Введите email и пароль, чтобы продолжить</h3>
         <label>
             Электронная почта
             <input type="email" name="email" required placeholder="Введите электронную почту">
