--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1 class="MindUpTitle">MindUp</h1>
     <form action="/login" method="post" id="login">
         <h2 class="helloText">Привет!</h2>
-        <h3>Введите email и пароль чтобы продолжить</h3>
+        <h3>Введите email и пароль, чтобы продолжить</h3>
         <label>
             Электронная почта
             <input type="email" name="email" required placeholder="Введите электронную почту">
