--- a/registration.html
+++ b/registration.html
@@ -11,7 +11,7 @@
 </div>
 <div id="loginContainer">
     <h1 class="MindUpTitle">MindUp</h1>
-    <form action="login" method="post" id="register">
+    <form action="register" method="post" id="register">
         <h2 class="helloText">Регистрация</h2>
         <h3>Введите данные пользователя</h3>
         <label>
