--- a/groups.html
+++ b/groups.html
@@ -35,20 +35,21 @@
     <div class="background-container"></div>
     <div class="blocks-wrapper">
         <div class="blocks">
-            <div class="block add">Добавить группу</div>
-            <div class="block">
+            <div class="block group add">Добавить группу</div>
+            <div class="block group">
                 <div class="block-background" style="background-image: url('groups_images/fiit.png')"></div>
                 <h2>ФИИТ</h2>
             </div>
-            <div class="block">
+            <div class="block group">
                 <h2>СКБ Контур</h2>
             </div>
-            <div class="block">
+            <div class="block group">
                 <div class="block-background" style="background-image: url('groups_images/shad.jpeg')"></div>
                 <h2>ШАД</h2>
             </div>
         </div>
     </div>
+<script src="block_controller.js"></script>
 <script src="groups.js"></script>
 </body>
 </html>
