--- a/meetings.html
+++ b/meetings.html
@@ -40,9 +40,31 @@
     <div class="blocks">
         <div class="block add">Добавить встречу</div>
         <div class="block">
-            <div class="block-title">Базы данных, разбор д/з</div>
+            <div class="block-title">Базы данных,<br> разбор д/з</div>
             <div class="block-info">
-
+                <div class="meeting-info-container">
+                    <div class="icon-text-container">
+                        <div class="datetime-wrapper">
+                            <img src="site_images/time_medium.svg" alt="time icon">
+                            <div class="datetime">
+                                <p class="date">26.06.24</p>
+                                <p class="time">14:30</p>
+                            </div>
+                        </div>
+                        <div class="place-wrapper">
+                            <img src="site_images/place.svg" alt="time icon">
+                            <p>Матмех, 612</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="tags-wrapper">
+                    <div class="tags">
+                        <div class="tag">#программирование</div>
+                        <div class="tag">#домзад</div>
+                        <div class="tag">#БД</div>
+                    </div>
+                    <a href="/no">посмотреть все</a>
+                </div>
             </div>
         </div>
     </div>
