--- a/meetings.html
+++ b/meetings.html
@@ -40,30 +40,81 @@
     <div class="blocks">
         <div class="block add">Добавить встречу</div>
         <div class="block">
-            <div class="block-title">Базы данных,<br> разбор д/з</div>
-            <div class="block-info">
-                <div class="meeting-info-container">
-                    <div class="icon-text-container">
-                        <div class="datetime-wrapper">
-                            <img src="site_images/time_medium.svg" alt="time icon">
-                            <div class="datetime">
-                                <p class="date">26.06.24</p>
-                                <p class="time">14:30</p>
+            <div class="block-content">
+                <div class="block-title-wrapper">
+                    <div class="block-title">Базы данных,<br> разбор д/з</div>
+                </div>
+                <div class="block-info">
+                    <div class="meeting-info-container">
+                        <div class="icon-text-container">
+                            <div class="datetime-wrapper">
+                                <img src="site_images/time_medium.svg" alt="time icon">
+                                <div class="datetime">
+                                    <p class="date">26.06.24</p>
+                                    <p class="time">14:30</p>
+                                </div>
+                            </div>
+                            <div class="place-wrapper">
+                                <img src="site_images/place.svg" alt="place icon">
+                                <p>Матмех, 612</p>
                             </div>
                         </div>
-                        <div class="place-wrapper">
-                            <img src="site_images/place.svg" alt="time icon">
-                            <p>Матмех, 612</p>
+                    </div>
+                    <div class="tags-wrapper">
+                        <div class="tags">
+                            <div class="tag">#программирование</div>
+                            <div class="tag">#домзад</div>
+                            <div class="tag">#БД</div>
                         </div>
+                        <a href="/no">посмотреть все</a>
                     </div>
                 </div>
-                <div class="tags-wrapper">
-                    <div class="tags">
-                        <div class="tag">#программирование</div>
-                        <div class="tag">#домзад</div>
-                        <div class="tag">#БД</div>
+                <div class="person-container">
+                    <img src="site_images/person.svg" alt="person icon">
+                    <div class="person-info">
+                        <p class="person-name">Степан Кучин</p>
+                        <p class="person_additional-info">1 курс, Свердловское музыкальное
+                            училище им. П. И. Чайковского</p>
                     </div>
-                    <a href="/no">посмотреть все</a>
+                </div>
+            </div>
+        </div>
+        <div class="block">
+            <div class="block-content">
+                <div class="block-title-wrapper">
+                    <div class="block-title">ML, контест</div>
+                </div>
+                <div class="block-info">
+                    <div class="meeting-info-container">
+                        <div class="icon-text-container">
+                            <div class="datetime-wrapper">
+                                <img src="site_images/time_medium.svg" alt="time icon">
+                                <div class="datetime">
+                                    <p class="date">10.05.24</p>
+                                    <p class="time">18:30</p>
+                                </div>
+                            </div>
+                            <div class="place-wrapper">
+                                <img src="site_images/place.svg" alt="place icon">
+                                <p>Онлайн</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tags-wrapper">
+                        <div class="tags">
+                            <div class="tag">#говно</div>
+                            <div class="tag">#фиит</div>
+                            <div class="tag">#мл</div>
+                        </div>
+                        <a href="/no">посмотреть все</a>
+                    </div>
+                </div>
+                <div class="person-container">
+                    <img src="site_images/person.svg" alt="person icon">
+                    <div class="person-info">
+                        <p class="person-name">Илья Рыбин</p>
+                        <p class="person_additional-info">10 класс, 9 гимназия г. Екатеринбург</p>
+                    </div>
                 </div>
             </div>
         </div>
