add meet status

--- a/meetings.html
+++ b/meetings.html
@@ -40,6 +40,7 @@
     <div class="blocks">
         <div class="block add">Добавить встречу</div>
         <div class="block">
+            <img src="site_images/person-cancel.svg" alt="on meeting" class="meeting-status">
             <div class="block-content">
                 <div class="block-title-wrapper">
                     <div class="block-title">Базы данных,<br> разбор д/з</div>
@@ -80,6 +81,7 @@
             </div>
         </div>
         <div class="block">
+            <img src="site_images/person-ok.svg" alt="on meeting" class="meeting-status">
             <div class="block-content">
                 <div class="block-title-wrapper">
                     <div class="block-title">ML, контест</div>
