--- a/meetings.html
+++ b/meetings.html
@@ -40,7 +40,8 @@
     <div class="blocks">
         <div class="block add">Добавить встречу</div>
         <div class="block">
-            <img src="site_images/person-cancel.svg" alt="on meeting" class="meeting-status">
+            <img src="site_images/person-cancel.svg" alt="Отказаться" class="meeting-status">
+            <div class="meeting-status-tooltip">Отказаться</div>
             <div class="block-content">
                 <div class="block-title-wrapper">
                     <div class="block-title">Базы данных,<br> разбор д/з</div>
@@ -49,7 +50,7 @@
                     <div class="meeting-info-container">
                         <div class="icon-text-container">
                             <div class="datetime-wrapper">
-                                <img src="site_images/time_medium.svg" alt="time icon">
+                                <img src="site_images/time_medium.svg" alt="time icon" title="bebra">
                                 <div class="datetime">
                                     <p class="date">26.06.24</p>
                                     <p class="time">14:30</p>
@@ -81,7 +82,8 @@
             </div>
         </div>
         <div class="block">
-            <img src="site_images/person-ok.svg" alt="on meeting" class="meeting-status">
+            <img src="site_images/person-ok.svg" alt="Записаться" class="meeting-status">
+            <div class="meeting-status-tooltip">Записаться</div>
             <div class="block-content">
                 <div class="block-title-wrapper">
                     <div class="block-title">ML, контест</div>
