--- a/meetings.html
+++ b/meetings.html
@@ -15,8 +15,8 @@
         <a href="/brawlstars" class="logo">MindUp</a>
     </div>
     <div class="menuGroup">
-        <a href="/brawlstars" class="groupsLink">Группы</a>
-        <a href="/brawlstars" class="meetings">Все встречи</a>
+        <a href="groups.html" class="groupsLink">Группы</a>
+        <a href="meetings.html" class="meetings">Все встречи</a>
         <div class="search">
             <form>
                 <label>
