modal add group done

--- a/groups.html
+++ b/groups.html
@@ -58,6 +58,7 @@
                     <input type="text" placeholder="Название группы" required>
                 </label>
                 <label for="group-image-upload" class="custom-image-upload">
+                    <h3>Заменить изображение</h3>
                     <input type="file" id="group-image-upload" name="image" accept="image/jpeg, image/png">
                 </label>
                 <div style="display: flex; justify-content: space-between; width: 380px">
