--- a/groups.html
+++ b/groups.html
@@ -54,8 +54,8 @@
         <div class="modal-blackout"></div>
         <div class="modal-view">
             <form>
-                <label>
-                    <input type="text" placeholder="Название группы" required>
+                <label class="name-input-label">
+                    <input type="text" placeholder="Название группы" maxlength="18" required>
                 </label>
                 <label for="group-image-upload" class="custom-image-upload">
                     <h3>Заменить изображение</h3>
