--- a/meetings.html
+++ b/meetings.html
@@ -75,7 +75,7 @@
                     <img src="site_images/person.svg" alt="person icon">
                     <div class="person-info">
                         <p class="person-name">Степан Кучин</p>
-                        <p class="person-additional-info">stepa.kuchin@urfu.me</p>
+                        <p class="person-additional-info" title="stepa.kuchin@urfu.me">stepa.kuchin@urfu.me</p>
                     </div>
                 </div>
             </div>
@@ -116,7 +116,7 @@
                     <img src="site_images/person.svg" alt="person icon">
                     <div class="person-info">
                         <p class="person-name">Илья Рыбин</p>
-                        <p class="person-additional-info">ilya.rybin@urfu.me</p>
+                        <p class="person-additional-info" title="ilya.rybin@urfu.me">ilya.rybin@urfu.me</p>
                     </div>
                 </div>
             </div>
