add group title

--- a/meetings.html
+++ b/meetings.html
@@ -37,6 +37,7 @@
     <div class="background-container">
         <div class="background-dimmer"></div>
     </div>
+    <div class="source-group-name">ФИИТ</div>
     <div class="blocks-wrapper">
         <div class="blocks">
             <div class="block add">Добавить встречу</div>
