--- a/meetings.html
+++ b/meetings.html
@@ -129,6 +129,9 @@
         <div class="modal-blackout"></div>
         <div class="modal-view">
             <form>
+                <label class="display-none-input">
+                    <input type="text" name="organization_id" id="meetingAddOrgId">
+                </label>
                 <label class="name-input-label">
                     <input type="text" name="name" placeholder="Введите название встречи" maxlength="35" required>
                 </label>
