--- a/authorisation.html
+++ b/authorisation.html
@@ -9,10 +9,10 @@
 <div id="imageContainer">
     <img src="pngwing.com.png" alt="test" class="welcomeImage">
 </div>
-<div id="loginContainer">
+<div id="login-container">
     <h1 class="MindUpTitle">MindUp</h1>
     <form action="login" method="post" id="login">
-        <h2 class="helloText">Привет!</h2>
+        <h2 class="hello-text">Привет!</h2>
         <h3>Введите email и пароль, чтобы продолжить</h3>
         <label>
             Электронная почта
